--- a/istyle.css
+++ b/istyle.css
@@ -60,7 +60,7 @@ body{
 .temperature-value p{
     padding: 0;
     margin: 0;
-    color: #293251;
+    color: #7c7d81;
     font-size: 4em;
     text-align: center;
     cursor: pointer;
@@ -71,7 +71,7 @@ body{
 }
 
 .temperature-value span{
-    color: #293251;
+    color: #5d5e5f;
     font-size: 0.5em;
 }
 
@@ -82,7 +82,7 @@ body{
 .temperature-description p{
     padding: 8px;
     margin: 0;
-    color: #293251;
+    color: #7c7e83;
     text-align: center;
     font-size: 1.2em;
 }
@@ -94,7 +94,7 @@ body{
 .location p{
     margin: 0;
     padding: 0;
-    color: #293251;
+    color: #76777a;
     text-align: center;
     font-size: 0.8em;
 }
